Bug 121245 - Some untranslated sentences when LibreOffice started on the command line with --language=option
Summary: Some untranslated sentences when LibreOffice started on the command line with...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.3.2 release
Hardware: All All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Commandline
  Show dependency treegraph
 
Reported: 2018-11-07 13:34 UTC by Sabri Unal
Modified: 2021-02-15 08:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
start center (56.28 KB, image/png)
2018-11-07 13:34 UTC, Sabri Unal
Details
File menu screenshot (103.23 KB, image/png)
2018-11-07 13:34 UTC, Sabri Unal
Details
letter wizard and customize (255.38 KB, image/png)
2018-11-07 13:35 UTC, Sabri Unal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabri Unal 2018-11-07 13:34:06 UTC
Created attachment 146397 [details]
start center

There are some minor and major issues.

1) Start Center does not accept language parameter and keep on default language.
2) File menu has some untranslated sentences but actually, they are translated on language packs.
3) If you open another dialog (Fax Wizard or Letter Wizard or Customize from Tools - Customize) it is not accepting the language parameter. 

---

The issue is tested on:

Version: 6.1.3.2
Build ID: 1:6.1.3~rc2-0ubuntu0.18.04.2
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-GB (en_GB.UTF-8); Calc: group threaded

---

To reproduce this issue, default language must not be selected from options as man pages say:
"--language={lang} Uses specified language, if language is not selected yet for UI. The lang is a tag of the language in IETF language tag."

0) Reset profile to prevent from misleads.
1) Install some foreign languages. In my case, I installed Korean, Japan, Italian, Turkish languages to test this bug.
2) Use "libreoffice --language=lang" to open LibreOffice from the command line.
Comment 1 Sabri Unal 2018-11-07 13:34:51 UTC
Created attachment 146398 [details]
File menu screenshot
Comment 2 Sabri Unal 2018-11-07 13:35:34 UTC
Created attachment 146399 [details]
letter wizard and customize
Comment 3 Xisco Faulí 2019-01-22 16:15:02 UTC
Hello Sabri,
Could you please try to reproduce it with LibreOffice 6.2.0.2 from https://wiki.documentfoundation.org/QA/GetInvolved#Test_Pre-releases ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 4 Sabri Unal 2019-01-22 19:37:34 UTC
I have just tested with Version: 6.2.1.0.0 on Ubuntu 18.04 and the problem is still there.

I can share the screenshots again if it's necessary. 

Version: 6.2.1.0.0+
Build ID: 78335b8848ed95c978b9c23639ec7711fec1c1b8
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-2, Time: 2019-01-22_07:47:22
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Julien Nabet 2019-02-09 14:14:27 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

(Thank you for the tip, I didn't know language option)
Comment 6 Julien Nabet 2019-02-09 14:17:26 UTC
Also, my default language UI is French.

I used language=it and items not translated are in English not even in French.
Comment 7 QA Administrators 2021-02-09 05:09:16 UTC Comment hidden (obsolete)
Comment 8 himajin100000 2021-02-11 17:58:23 UTC
POSSIBLY the similar issue. (but what is discussed in the forum is FIXED by tdf#119367)
I hope the cause was the same.

https://ask.libreoffice.org/ja/question/281326
Comment 9 Mike Kaganski 2021-02-12 07:08:53 UTC
https://gerrit.libreoffice.org/c/core/+/110776
Comment 10 Commit Notification 2021-02-15 08:26:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cbcec4425e04e3614a2025b49fdc221216ac51d3

tdf#121245: also set ooLocale when language is set by command line

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.